--- a/HomeMovie/index.html
+++ b/HomeMovie/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/Index.css" />
 		<link rel="stylesheet" type="text/css" href="css/Home.css"/>
+		<link rel="stylesheet" type="text/css" href="css/Search.css" />
 		<script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
 		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -33,8 +34,9 @@
 					<li>
 						<a href="#/Cartoon">动漫</a>
 					</li>
-
 				</ul>
+				
+				<div id="Search_btn"><a href="#/Search">搜索</a></div>
 			</div>
 
 			<div id="View">
